Fix date period text wrap

--- a/root/static/styles/forms.less
+++ b/root/static/styles/forms.less
@@ -676,6 +676,10 @@ table.artist-credit-editor {
                 flex: 2 5;
                 text-align: left;
                 white-space: inherit;
+
+                span.date-period {
+                    white-space: nowrap;
+                }
             }
 
             select {
